# spin-sqs-keda

./: README.md  build-and-push-spinapp.sh  deploy-keda.sh  deploy-scaler.sh  deploy-spinapp.sh  deploy-spinkube-k3d.sh  deploy-spinkube.sh  deploy-valkey.sh
manifests/: deployment.yaml  scaler.tmpl.yaml
src/loader/: Cargo.toml
src/loader/src/: cli.rs  main.rs  models.rs
src/spin-app/: spin.tmpl.toml  spin.toml
src/spin-app/customer-transformer/: Cargo.toml
src/spin-app/customer-transformer/src/: bindings.rs  lib.rs  models.rs
src/spin-app/customer-transformer/wit/: world.wit
