[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
aws-config = "1.5.10"
aws-sdk-sqs = "1.50.0"
clap = { version = "4.5.23", features = ["derive"] }
paginate = "1.1.11"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
