[package]
name = "customer-transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
spin-sdk = "3.1.0"
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "fermyon:spin-sqs"

[package.metadata.component.dependencies]
